# ffmpeg

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jn/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/jn/ffmpeg/: DNPlayer.java  FfmpegApplication.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/jn/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
